--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3921,7 +3921,7 @@ a {
       grid-row: 1 / 2;
 
       @media (max-width: 1560px) {
-        padding: 0 116px 100px;
+        padding: 0 116px 120px;
       }
 
       @media (max-width: 960px) {
@@ -4087,6 +4087,18 @@ a {
       background: #f5f5f5;
       overflow: hidden;
       padding: 80px 104px;
+
+      @media (max-width: 1560px) {
+        padding: 86px 116px 80px;
+      }
+
+      @media (max-width: 960px) {
+        padding: 86px 30px 80px;
+      }
+
+      @media (max-width: 560px) {
+        padding: 48px 15px 80px;
+      }
       
       .building__container {
         // padding: 30px 0 83px;
@@ -4094,6 +4106,11 @@ a {
         
         .building__title {
           margin-bottom: 50px;
+
+          @media (max-width: 1560px) {
+            margin-bottom: 56px;
+
+          }
         }
 
         .building__cards-list {
@@ -4105,9 +4122,28 @@ a {
             width: 100%;
             border-radius: 10px;
             overflow: hidden;
+            min-height: 502px;
+
+            @media (max-width: 960px) {
+              grid-auto-flow: row;
+              grid-template-columns: 1fr;
+              max-width: 530px;
+
+            }
 
             .building__card-img {
               position: relative;
+
+              @media (max-width: 960px) {
+                height: 355px;
+              }
+
+              & img {
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+              }
 
               .building__card-info {
                 position: absolute;
@@ -4187,6 +4223,13 @@ a {
               grid-template-rows: auto auto 1fr auto;
               background: #fff;
 
+              @media (max-width: 960px) {
+                padding: 32px 30px 30px;
+
+                min-height: 436px;
+
+              }
+
               .building__card-title {
                 margin-bottom: 15px;
                 font-family: Inter;
@@ -4196,20 +4239,36 @@ a {
                 text-align: left;
                 color: #363636;
 
+                @media (max-width: 960px) {
+                  margin-bottom: 20px;
+
+                }
+
               }
 
               .building__card-text {
-                margin-bottom: 55px;
+                // margin-bottom: 55px;
+
+                @media (max-width: 960px) {
+                  line-height: 22.2px;
+                }
               }
 
               .building__card-price {
-                // margin-bottom: 70px;
+                align-self: center;
+
+                margin-bottom: 22px;
                 font-family: Inter;
                 font-size: 20px;
                 font-weight: 400;
                 line-height: 24.2px;
                 text-align: left;
                 color: #000000;
+
+                @media (max-width: 960px) {
+                  align-self: end;
+
+                }
               }
 
               .building__card-footer {
@@ -4268,23 +4327,28 @@ a {
           gap: 20px;
           align-items: center;
   
-          @media (max-width: 1560px) {
-            right: 114px;
+          @media (max-width: 560px) {
+            gap: 10px;
           }
   
           .swiper-button {
-            position: relative;
-            width: 56px;
-            height: 56px;
-            top: initial;
-            right: initial;
-            left: initial;
-            bottom: initial;
-            margin: 0;
+            // position: relative;
+            // width: 56px;
+            // height: 56px;
+            // top: initial;
+            // right: initial;
+            // left: initial;
+            // bottom: initial;
+            // margin: 0;
   
             & svg {
               width: 56px;
               height: 56px;
+
+              @media (max-width: 560px) {
+                width: 45px;
+                height: 45px;
+              }
             }
   
             &::after {
