--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2973,12 +2973,10 @@ a {
   top: 0;
   left: 0;
   right: 0;
-  // width: 100%;
   height: 70px;
   z-index: 100;
   background-color: rgba(white, 0.8);
   backdrop-filter: blur(22px);
-  // padding: 0 30px;
 
   .header__section {
     padding: 0 104px;
@@ -3001,11 +2999,7 @@ a {
     .header__container {
       max-width: 1714px;
       width: 100%;
-      // margin: 0 auto;
-      // padding: 0;
-      // display: grid;
-      // align-content: center;
-      // height: 100%;
+      margin: 0 auto;
 
       .header__nav {
       }
