--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8252,6 +8252,11 @@ a {
             grid-template-columns: repeat(auto-fit, minmax(357px, 1fr));
 
           }
+
+          @media (max-width: 800px) {
+            grid-template-columns: 1fr;
+
+          }
         }
 
         .choice__inputs-list_top {
@@ -8677,10 +8682,15 @@ a {
       display: grid;
       grid-auto-flow: row;
       gap: 40px;
+
       .apartments__list {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
         gap: 10px;
+
+        @media (max-width: 770px) {
+          grid-template-columns: 1fr;
+        }
 
         @media (max-width: 560px) {
           gap: 15px;
@@ -8693,6 +8703,11 @@ a {
           min-height: 655px;
           background: #ffffff;
           border-radius: 5px;
+
+          @media (max-width: 770px) {
+            max-width: 100%;
+
+          }
 
           @media (max-width: 560px) {
             min-height: 553px;
