--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10165,11 +10165,40 @@ a {
     position: relative;
     background: #f5f5f5;
 
+    padding: 36px 104px 100px;
+
+    @media (max-width: 1560px) {
+      padding: 40px 116px 75px;
+    }
+  
+    @media (max-width: 1300px) {
+      padding: 40px 30px 75px;
+    }
+  
+    @media (max-width: 560px) {
+      padding: 20px 15px 30px;
+    }
+
     .project-page__container {
-      padding: 36px 0 95px;
+      // padding: 36px 0 95px;
       display: grid;
-      grid-template: auto 729px / 870px 1fr;
-      gap: 40px;
+      grid-template: auto 729px / 51% 47%;
+      gap: 40px 2%;
+
+      @media (max-width: 1560px) {
+        gap: 20px 2%;
+        grid-template: auto 640px / 51% 47%;
+      }
+
+      @media (max-width: 1500px) {
+        grid-template: auto 1fr / 51% 47%;
+
+      }
+
+      @media (max-width: 560px) {
+        // grid-template: auto auto auto / 1fr;
+
+      }
 
       .project-page__top-wrap {
         grid-column: 2 span;
@@ -10178,6 +10207,16 @@ a {
         justify-content: space-between;
         align-items: center;
         gap: 10px;
+
+        @media (max-width: 560px) {
+          // grid-template: auto / 1fr;
+          // grid-column: 1 span;
+          grid-auto-flow: row;
+          gap: 20px;
+          justify-content: initial;
+
+  
+        }
 
         .project-page__title {
         }
@@ -10190,11 +10229,21 @@ a {
           border: 1px solid #d5d5d5;
           border-radius: 50px;
 
+          @media (max-width: 560px) {
+            grid-template: auto / 1fr;
+            // grid-column: 1 span;
+            width: 100%;
+
+    
+          }
+
           .project-page__button {
             padding: 9px 10px;
             background: #363636;
             border-radius: 140px;
             border-radius: 50px;
+            display: grid;
+            place-content: center;
 
             .project-page__button-text {
               font-family: Inter;
@@ -10204,6 +10253,15 @@ a {
               text-align: center;
               color: #fff;
               text-transform: uppercase;
+
+              @media (max-width: 1560px) {
+                font-family: Inter;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 19.36px;
+                text-align: center;
+
+              }
             }
 
             & svg {
@@ -10240,10 +10298,23 @@ a {
       .project-page__list {
         height: 100%;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         gap: 20px;
         overflow: auto;
         padding-right: 10px;
+        align-content: start;
+
+        @media (max-width: 1560px) {
+          gap: 10px;
+        }
+
+        @media (max-width: 1500px) {
+          grid-column: 2 span;  
+          padding-right: 0;
+
+        }
+
+
 
         &::-webkit-scrollbar {
           width: 4px;
@@ -10268,172 +10339,312 @@ a {
         }
 
         .project-page__item {
-          display: grid;
-          grid-auto-flow: row;
-          grid-template-rows: 356px 1fr;
           // max-width: 1000px;
           // width: 100%;
-          min-height: 563px;
-          height: max-content;
+          min-height: 475px;
+          // height: max-content;
           border-radius: 10px;
           overflow: hidden;
+
+          .project-page__link {
+            display: grid;
+            grid-auto-flow: row;
+            grid-template-rows: auto 1fr;
+
+            .project-page__card-img {
+              position: relative;
+              overflow: hidden;
+              aspect-ratio: 356 / 300;
+
+              @media (max-width: 1500px) {
+                aspect-ratio: 356 / 257;
+              }
+
+              @media (max-width: 560px) {
+                aspect-ratio: 356 / 280;
+              }
+  
+              & img {
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
+              }
+  
+              .project-page__card-info {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                padding: 30px;
+                display: grid;
+                grid-auto-flow: column;
+                align-items: center;
+                gap: 15px;
+                grid-template-columns: auto auto 1fr;
+  
+                // border-radius: 10px;
+                // height: 100%;
+                // background: rgba(0, 0, 0, 0.5);
+                // display: grid;
+                // grid-auto-flow: column;
+                // place-items: center;
+                // gap: 10px;
+
+                
+                @media (max-width: 1560px) {
+                  padding: 25px;
+                  gap: 10px;
+
+                }
+
+                @media (max-width: 1500px) {
+                  padding: 20px;
+                  gap: 10px;
+
+                }
+  
+                & svg {
+                  @media (max-width: 1560px) {
+                    width: 15px;
+                  }
+
+                  @media (max-width: 1500px) {
+                    width: 30px;
+                  }
+                }
+
+                .project-page__card-label {
+                  font-family: Inter;
+                  font-size: 30px;
+                  font-weight: 500;
+                  line-height: 36.31px;
+                  text-align: left;
+                  color: #fff;
+                  text-transform: uppercase;
+
+                  @media (max-width: 1560px) {
+                    font-family: Inter;
+                    font-size: 22.49px;
+                    font-weight: 500;
+                    line-height: 27.21px;
+                    text-align: left;
+                  }
+
+                  @media (max-width: 1500px) {
+                    font-family: Inter;
+                    font-size: 30px;
+                    font-weight: 500;
+                    line-height: 36.31px;
+                    text-align: left;
+                  }
+  
+                  &.project-page__card-label_small {
+                    font-family: Inter;
+                    font-size: 20px;
+                    font-weight: 700;
+                    line-height: 24.2px;
+                    text-align: left;
+                    color: #fff;
+
+                    @media (max-width: 1560px) {
+                      font-family: Inter;
+                      font-size: 14.99px;
+                      font-weight: 700;
+                      line-height: 18.14px;
+                      text-align: left;                     
+                      
+                    }
+
+                    @media (max-width: 1500px) {
+                      font-family: Inter;
+                      font-size: 20px;
+                      font-weight: 700;
+                      line-height: 24.2px;
+                      text-align: left;
+                      color: #fff;
+                    }
+                  }
+                }
+                .project-page__card-info-btn {
+                  /* Статус проекта */
+                  /* Auto layout */
+                  // display: flex;
+                  // flex-direction: column;
+                  // align-items: center;
+                  display: grid;
+                  place-items: center;
+                  padding: 10px 15px;
+                  margin-left: auto;
+                  // gap: 7px;
+  
+                  // margin: 0 auto;
+                  // width: 78px;
+                  // height: 39px;
+  
+                  background: #ffffff;
+                  backdrop-filter: blur(15px);
+                  border-radius: 5px;
+  
+                  font-family: Inter;
+                  font-size: 16px;
+                  font-weight: 500;
+                  line-height: 19.36px;
+                  text-align: center;
+                  color: #56693e;
+                  text-transform: uppercase;
+
+                  @media (max-width: 1560px) {
+                    font-family: Inter;
+                    font-size: 11.99px;
+                    font-weight: 500;
+                    line-height: 14.51px;
+                    text-align: center;
+                    padding: 8px 12px;
+
+                  }
+
+                  @media (max-width: 1500px) {
+                    font-family: Inter;
+                    font-size: 16px;
+                    font-weight: 500;
+                    line-height: 19.36px;
+                    text-align: center;
+                  padding: 10px 15px;
+
+                  }
+                }
+              }
+            }
+  
+            .project-page__card-content {
+              padding: 30px;
+              display: grid;
+              // height: 100%;
+              min-height: 202px;
+              // grid-auto-flow: row;
+              align-content: start;
+              align-items: start;
+              grid-template-rows: 1fr auto;
+              background: #fff;
+              align-self: start;
+
+              @media (max-width: 1560px) {
+                padding: 20px;
+                min-height: 157px;
+
+              }
+
+              @media (max-width: 1500px) {
+                padding: 20px 20px;
+                min-height: 200px;
+
+              }
+  
+              .project-page__card-title {
+                margin-bottom: 15px;
+
+                @media (max-width: 1560px) {
+                  margin-bottom: 5px;
+  
+                }
+              }
+  
+              .project-page__card-text {
+                margin-bottom: 55px;
+              }
+  
+              .project-page__card-price {
+                // margin-bottom: 70px;
+                font-family: Inter;
+                font-size: 20px;
+                font-weight: 400;
+                line-height: 24.2px;
+                text-align: left;
+                color: #000000;
+              }
+  
+              .project-page__card-footer {
+                padding-top: 15px;
+                border-top: 1px solid rgba(#000000, 0.1);
+                display: grid;
+                grid-auto-flow: row;
+                gap: 10px;
+
+                @media (max-width: 1560px) {
+                  padding-top: 10px;
+                  gap: 5px;
+  
+                }
+
+                @media (max-width: 1500px) {
+                  gap: 9px;  
+                }
+  
+                .project-page__card-bot-wrap {
+                  // margin-bottom: 10px;
+                  display: grid;
+                  grid-auto-flow: column;
+                  justify-content: space-between;
+  
+                  .project-page__card-key {
+                    font-family: Inter;
+                    font-size: 16px;
+                    font-weight: 400;
+                    line-height: 19.36px;
+                    text-align: left;
+                    color: #616161;
+
+                    @media (max-width: 1560px) {
+                      font-size: 14px;
+                    }
+                  }
+  
+                  .project-page__card-value {
+                    font-family: Inter;
+                    font-size: 16px;
+                    font-weight: 400;
+                    line-height: 19.36px;
+                    text-align: left;
+                    color: #363636;
+
+                    @media (max-width: 1560px) {
+                      font-family: Inter;
+                      font-size: 14px;
+                      font-weight: 400;
+                      line-height: 16.94px;
+                      text-align: left;
+
+                    }
+                  }
+                }
+                .project-page__card-link {
+                  margin-top: 10px;
+                  font-family: Inter;
+                  font-size: 16px;
+                  font-weight: 500;
+                  line-height: 19.36px;
+                  text-align: left;
+                  color: #748d55;
+                  text-decoration: underline;
+
+                  @media (max-width: 1560px) {
+                    font-family: Inter;
+                    font-size: 14px;
+                    font-weight: 500;
+                    line-height: 16.94px;
+                    text-align: left;                    
+                  }
+                }
+              }
+            }
+          }
 
           &.project-page__item_no-show {
             display: none;
           }
 
-          .project-page__card-img {
-            position: relative;
-            height: 356px;
-            overflow: hidden;
-
-            & img {
-              display: block;
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-              object-position: center;
-            }
-
-            .project-page__card-info {
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              padding: 30px;
-              display: grid;
-              grid-auto-flow: column;
-              align-items: center;
-              gap: 15px;
-              grid-template-columns: auto auto 1fr;
-
-              // border-radius: 10px;
-              // height: 100%;
-              // background: rgba(0, 0, 0, 0.5);
-              // display: grid;
-              // grid-auto-flow: column;
-              // place-items: center;
-              // gap: 10px;
-
-              .project-page__card-label {
-                font-family: Inter;
-                font-size: 30px;
-                font-weight: 500;
-                line-height: 36.31px;
-                text-align: left;
-                color: #fff;
-                text-transform: uppercase;
-
-                &.project-page__card-label_small {
-                  font-family: Inter;
-                  font-size: 20px;
-                  font-weight: 700;
-                  line-height: 24.2px;
-                  text-align: left;
-                  color: #fff;
-                }
-              }
-              .project-page__card-info-btn {
-                /* Статус проекта */
-                /* Auto layout */
-                // display: flex;
-                // flex-direction: column;
-                // align-items: center;
-                display: grid;
-                place-items: center;
-                padding: 10px 15px;
-                margin-left: auto;
-                // gap: 7px;
-
-                // margin: 0 auto;
-                // width: 78px;
-                // height: 39px;
-
-                background: #ffffff;
-                backdrop-filter: blur(15px);
-                border-radius: 5px;
-
-                font-family: Inter;
-                font-size: 16px;
-                font-weight: 500;
-                line-height: 19.36px;
-                text-align: center;
-                color: #56693e;
-                text-transform: uppercase;
-              }
-            }
-          }
-
-          .project-page__card-content {
-            padding: 30px;
-            display: grid;
-            height: 100%;
-            // grid-auto-flow: row;
-            grid-template-rows: 1fr auto;
-            background: #fff;
-            align-self: start;
-
-            .project-page__card-title {
-              margin-bottom: 15px;
-            }
-
-            .project-page__card-text {
-              margin-bottom: 55px;
-            }
-
-            .project-page__card-price {
-              // margin-bottom: 70px;
-              font-family: Inter;
-              font-size: 20px;
-              font-weight: 400;
-              line-height: 24.2px;
-              text-align: left;
-              color: #000000;
-            }
-
-            .project-page__card-footer {
-              padding-top: 15px;
-              border-top: 1px solid rgba(#000000, 0.1);
-              display: grid;
-              grid-auto-flow: row;
-              gap: 10px;
-
-              .project-page__card-bot-wrap {
-                // margin-bottom: 10px;
-                display: grid;
-                grid-auto-flow: column;
-                justify-content: space-between;
-
-                .project-page__card-key {
-                  font-family: Inter;
-                  font-size: 16px;
-                  font-weight: 400;
-                  line-height: 19.36px;
-                  text-align: left;
-                  color: #616161;
-                }
-
-                .project-page__card-value {
-                  font-family: Inter;
-                  font-size: 16px;
-                  font-weight: 400;
-                  line-height: 19.36px;
-                  text-align: left;
-                  color: #363636;
-                }
-              }
-              .project-page__card-link {
-                margin-top: 10px;
-                font-family: Inter;
-                font-size: 16px;
-                font-weight: 500;
-                line-height: 19.36px;
-                text-align: left;
-                color: #748d55;
-                text-decoration: underline;
-              }
-            }
-          }
         }
       }
 
@@ -10441,6 +10652,10 @@ a {
         height: 100%;
         border-radius: 10px;
         overflow: hidden;
+
+        @media (max-width: 1500px) {
+          display: none;                 
+        }
       }
     }
   }
